# Multi-Agent-Orchestration

./: .gitignore
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/core/config/: settings.py
backend/src/: main.py
backend/src/core/config/: settings.py
backend/src/services/medical_assistant/: chat_engine.py  prompt_loader.py
backend/src/services/medical_assistant/agents/: doctor_agent.py
backend/src/services/medical_assistant/prompts/: doctor_instructions.prompt  receptionist_instructions.prompt
